force-app/main/default/objects/Vendor_Assessment__c/Vendor_Assessment__c.object-meta.xml
<CustomObject>
    <description>SRM 협력사 평가 Master Object</description>
    <label>협력사 평가</label>
    <nameField>
        <label>D/T코드</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>