force-app/main/default/objects/Vendor_Assessment__c/fields/AccountRelationship__c.field-meta.xml
<CustomField>
    <fullName>AccountRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>협력사이름</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>협력사 평가</relationshipLabel>
    <relationshipName>Vendor_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>