force-app/main/default/objects/Vendor_Assessment__c/fields/DT_ExcludeReason__c.field-meta.xml
<CustomField>
    <fullName>DT_ExcludeReason__c</fullName>
    <inlineHelpText>D/T레벨 제외사유를 선택해주십시오. 가장 유사한 내용으로 선택해주세요</inlineHelpText>
    <label>D/T레벨 제외사유</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01. 1번이유</fullName>
            </value>
            <value>
                <fullName>02. 2번이유</fullName>
            </value>
            <value>
                <fullName>03. 3번이유</fullName>
            </value>
            <value>
                <fullName>04. 4번이유</fullName>
            </value>
            <value>
                <fullName>05. 5번이유</fullName>
            </value>
            <value>
                <fullName>06. 신규등록업체</fullName>
            </value>
            <value>
                <fullName>07. 기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>