force-app/main/default/objects/Vendor_Assessment__c/fields/DTTxnBaseline__c.field-meta.xml
<CustomField>
    <fullName>DTTxnBaseline__c</fullName>
    <label>D/T기준거래금액(KRW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>