force-app/main/default/objects/Vendor_Assessment__c/fields/TxnBaseline__c.field-meta.xml
<CustomField>
    <fullName>TxnBaseline__c</fullName>
    <inlineHelpText>거래 금액입니다. (KRW)</inlineHelpText>
    <label>거래금액(KRW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>