force-app/main/default/objects/Vendor_Assessment__c/fields/VA_AssessOrg__c.field-meta.xml
<CustomField>
    <fullName>VA_AssessOrg__c</fullName>
    <label>평가조직</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DA_MD</fullName>
            </value>
            <value>
                <fullName>CNIPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>