force-app/main/default/objects/Vendor_Assessment__c/fields/VA_AssessReason__c.field-meta.xml
<CustomField>
    <fullName>VA_AssessReason__c</fullName>
    <label>평가제외사유 (선정사유)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>07. 기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>