force-app/main/default/objects/Vendor_Assessment__c/fields/VA_AssessStatus__c.field-meta.xml
<CustomField>
    <fullName>VA_AssessStatus__c</fullName>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F. 최종확정</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>