force-app/main/default/objects/Vendor_Assessment__c/fields/VA_CandidateExcludingReason__c.field-meta.xml
<CustomField>
    <fullName>VA_CandidateExcludingReason__c</fullName>
    <label>평가제외 상세사유</label>
    <length>200</length>
    <type>Text</type>
</CustomField>