force-app/main/default/objects/Vendor_Assessment__c/fields/VA_CandidateYN__c.field-meta.xml
<CustomField>
    <fullName>VA_CandidateYN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>평가대상 선정시 체크바랍니다. 체크 대상은 평가 진행의 대상이 됩니다.</inlineHelpText>
    <label>평가대상 (본사선정)</label>
    <type>Checkbox</type>
</CustomField>