force-app/main/default/objects/Vendor_Assessment__c/fields/VA_DTUSDAmount__c.field-meta.xml
<CustomField>
    <fullName>VA_DTUSDAmount__c</fullName>
    <formula>DTTxnBaseline__c / CURRENCYRATE(&quot;USD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>현재 기준 USD 기준환율로 조회됩니다.</inlineHelpText>
    <label>D/T기준거래금액(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>