force-app/main/default/objects/Vendor_Assessment__c/fields/VA_GBMHQ__c.field-meta.xml
<CustomField>
    <fullName>VA_GBMHQ__c</fullName>
    <label>평가대상 (GBM/법인검토)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBM</fullName>
            </value>
            <value>
                <fullName>법인검토</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>