force-app/main/default/objects/Vendor_Assessment__c/fields/VA_Remarks__c.field-meta.xml
<CustomField>
    <fullName>VA_Remarks__c</fullName>
    <label>비고</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>