force-app/main/default/objects/Vendor_Assessment__c/fields/VA_TxnAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>VA_TxnAmountUSD__c</fullName>
    <formula>TxnBaseline__c /  CURRENCYRATE(&quot;USD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>현재 기준환율로 환산된 거래금액입니다.</inlineHelpText>
    <label>거래금액(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>