force-app/main/default/objects/Vendor_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VA_AssessStatus__c</columns>
    <columns>AccountRelationship__c</columns>
    <columns>TxnBaseline__c</columns>
    <columns>DTTxnBaseline__c</columns>
    <columns>VA_CandidateYN__c</columns>
    <columns>VA_AssessReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>